syntax = "proto3";

package testing.paginated;

import "google/api/annotations.proto";

service Paginated {
  option (google.api.default_host) = "paginated.example.com";

  // Test a paginated RPC with a method signature.
  rpc SignatureMethod(Request) returns(Response) {
    option (google.api.method_signature) = {
	  fields: ["a_string", "a_number"] };
  }

  // Test a paginated RPC with a method signature that contains resource-names
  // in both the request and the response.
  rpc ResourcedMethod(ResourceRequest) returns(ResourceResponse) {
    option (google.api.method_signature) = {
	  fields: ["name"] };
  }
}

message Request {
  string a_string = 1;
  int32 a_number = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message Response {
  string next_page_token = 1;
  repeated string results = 2;
}

option (google.api.resource_definition) = {
  name: "Resource",
  path: "items/{item_id}"
};

message ResourceRequest {
  string name = 1 [(google.api.resource_reference) = "Resource"];
  int32 page_size = 2;
  string page_token = 3;
}

message ResourceResponse {
  string next_page_token = 1;
  repeated string results = 2 [(google.api.resource_reference) = "Resource"];
}
